force-app/main/default/objects/Int_Agreement_Line_Feature__c/Int_Agreement_Line_Feature__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Line Feature</description>
    <label>Int Agreement Line Feature</label>
    <nameField>
        <displayFormat>AFI-{0000000000}</displayFormat>
        <label>Agreement Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreement Line Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>