force-app/main/default/objects/Int_Agreement_Line_Feature__c/fields/Agreement_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Line_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agreement Line Name</description>
    <label>Agreement Line Name</label>
    <referenceTo>Int_Agreement_Line__c</referenceTo>
    <relationshipLabel>Int Agreement Line Features</relationshipLabel>
    <relationshipName>Int_Agreement_Line_Features</relationshipName>
    <type>Lookup</type>
</CustomField>