force-app/main/default/objects/Int_Agreement_Line_Feature__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>Feature Name</description>
    <label>Feature Name</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>